2008-06-25 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* plugin/00default.rb: display RUBY_PATCHLEVEL in footer.

2008-05-18  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* hiki/filter/bayes_filter.rb, plugin/50bayes_filter.rb,
	plugin/en/50bayes_filter.rb, plugin/ja/50bayes_filter.rb
	: Add feature to limit to show submitted pages.

2008-05-16  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* hiki/filter/bayes_filter.rb, plugin/50bayes_filter.rb,
	test/spec_50bayes_filter.rb, test/spec_bayes_filter.rb
	: URL of posted pagedata in bayes filter become to refer the page 'in Wiki'.

2008-05-14  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* hiki/filter/bayes_filter.rb, plugin/50bayes_filter.rb,
	plugin/ja/50bayes_filter.rb, plubin/en/50bayes_filter.rb
	: Add feature to share database for bayes filtering.

2008-03-26  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/repos/git.rb, test/test_repos_git.rb: support git
	repository (contributed by Kouhei Sutou).

2008-02-23  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* hiki/filter.rb, test/spec_filter.rb: Ignore error raised inregisterd filter.
	* hiki/filter/bayes_filter.rb, plugin/50bayes_filter.rb,
	plugin/en/50bayes_filter.rb, plugin/ja/50bayes_filter.rb,
	test/spec_bayes_filter.rb: Send report mail ONLY WHEN configuration is set so.

2008-02-20  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* plugin/50bayes_filter.rb: Fix a bug for ruby-1.8.5.

2008-02-12  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
	* hiki/command.rb, hiki/plugin.rb, messages/en.rb, messages/ja.rb:
	hiki/filter.rb, hiki/filter/bayes_filter.rb,
	hiki/filter/bayes_filter/bayes.rb, hiki/filter/word_filter.rb,
	plugin/50bayes_filter.rb, plugin/50word_filter.rb,
	plugin/en/50bayes_filter.rb, plugin/en/50word_filter.rb,
	plugin/ja/50bayes_filter.rb, plugin/ja/50word_filter.rb,
	test/spec_50bayes_filter.rb, test/spec_bayes_filter.rb:
	add spam filtering features.

2008-02-08  Kouhei Yanagita <yanagi@shakenbu.org>